# gm-incubator

./: .gitignore  README.md  pyproject.toml
.claude/skills/amber-report/: SKILL.md
.claude/skills/amber-report/reference/: amber-charts.js  amber-ledger.css  example-weaknesses.html
.claude/skills/gm-coach/: SKILL.md
docs/: ACCEPTANCE.md  ab-gate-2026-07.md
docs/superpowers/plans/: 2026-06-30-chess-coach.md
skills/gm-coach/: SKILL.md
src/gm/: accept.py  chesscom.py  cli.py  config.py  db.py  profile.py  report.py  sync.py  viz.py
src/gm/analysis/: classify.py  clock.py  engine.py  phase.py  pipeline.py  see.py  winprob.py
src/gm/stats/: __init__.py  overview.py  queries.py  repertoire.py  weaknesses.py
tests/: conftest.py  test_accept.py  test_backfill.py  test_chesscom.py  test_classify.py  test_cli.py  test_clock.py  test_config.py  test_db.py  test_engine_integration.py  test_phase.py  test_pipeline.py  test_pipeline_integration.py  test_profile.py  test_queries.py  test_repertoire.py  test_report.py  test_see.py  test_skill.py  test_sync.py  test_sync_parallel.py  test_time_class_filter.py  test_viz.py  test_weaknesses.py  test_winprob.py
tests/fixtures/: month_sample.json
