[project]
name = "gm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["python-chess>=1.11", "httpx>=0.27", "typer>=0.12", "rich>=13"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
gm = "gm.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
